# de-sounding-echo-chambers

./: Makefile  README.md  pyproject.toml
dataset/raw/: synth_2_comms.json  synth_3_comms.json  synth_5_comms.json
notebooks/: evaluate.ipynb  evaluate_multiple.ipynb  generate_graph.ipynb  run_simulation.ipynb
src/: data.py  evaluate.py  graph.py  main.py  model.py  simulation.py  utils.py
src/generate/: generate_synthetic_graph.py
